<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="name">用户名</string>
    <string name="signin">注册</string>
    <string name="no_empty_account">账号不能为空</string>
    <string name="no_empty_password">密码不能为空</string>
    <string name="no_empty_name">用户名不能为空</string>
    <string name="error_password">密码错误</string>
    <string name="error">错误</string>
    <string name="comfirm">确定</string>
    <string name="broadcast_discussion">话题讨论</string>
    <string name="loading">加载中...</string>
    <string name="broadcast_activity">话题</string>
    <string name="friends_activity">好友</string>
    <string name="letter_activity">私信</string>
    <string name="game">游戏</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="draw">画图</string>
    <string name="map">GPS定位</string>
    <string name="weather">天气预报</string>
    <string name="camera">录像</string>
    <string name="screenCapture">录屏</string>
    <string name="communication">社交</string>
    <string	name="txtLong">经度:</string>
    <string	name="txtLat">纬度:</string>
    <string	name="loc">定位</string>
    <string	name="lng">113.395563</string>
    <string	name="lat">23.126222</string>
    <string	name="gps">GPS定位</string>
    <string	name="manul">手动定位</string>
</resources>
