<?xml version="1.0" encoding="utf-8" ?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="3"
    android:columnCount="3"
    android:id="@+id/root">
    <!-- 定义一个横跨4列的文本框，
    并设置该文本框的前景色、背景色等属性  -->
    <LinearLayout
        android:id="@+id/radio_button_weather"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/weather"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/radio_button_game"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_game"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/radio_button_draw"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/draw"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/radio_button_map"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:drawable/ic_dialog_map"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/radio_button_video"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:drawable/ic_media_play"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radio_button_music"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/music"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/radio_button_camera"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:drawable/ic_menu_camera"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radio_button_screen"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/screen"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screenCapture"/>
    </LinearLayout>

</GridLayout>
